<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#02221E"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/details_strain_image"
        android:layout_width="358dp"
        android:layout_height="195dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/details_image_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_strain_name"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/details_strain_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/details_strain_name_label"
        android:textAlignment="center"
        android:textColor="#E9E5E5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details_strain_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/strain_type"
        android:textColor="#E9E5E5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_strain_image" />

    <TextView
        android:id="@+id/type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/type"
        android:textColor="#E9E5E5"
        app:layout_constraintStart_toEndOf="@+id/details_strain_type"
        app:layout_constraintTop_toBottomOf="@+id/details_strain_image" />

    <TextView
        android:id="@+id/effects_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/effects"
        android:textColor="#E9E5E5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_strain_type" />

    <TextView
        android:id="@+id/effects_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:text="@string/effects_textview"
        android:textColor="#E9E5E5"
        app:layout_constraintStart_toEndOf="@+id/effects_label"
        app:layout_constraintTop_toBottomOf="@+id/type_textView" />

    <TextView
        android:id="@+id/details_helps_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/helps"
        android:textColor="#E9E5E5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/effects_label" />

    <TextView
        android:id="@+id/helps_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/helps_textview"
        android:textColor="#E9E5E5"
        app:layout_constraintStart_toEndOf="@+id/details_helps_label"
        app:layout_constraintTop_toBottomOf="@+id/effects_textView" />

    <TextView
        android:id="@+id/details_desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textColor="#E9E5E5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_helps_label" />

    <TextView
        android:id="@+id/desc_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/desc"
        android:textColor="#E9E5E5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_desc_label" />
</androidx.constraintlayout.widget.ConstraintLayout>